This codebase works with Spark 1.1.0 version