@@ -1,7 +1,25 @@
+/*
+ * Licensed to the Apache Software Foundation (ASF) under one
+ * or more contributor license agreements.  See the NOTICE file
+ * distributed with this work for additional information
+ * regarding copyright ownership.  The ASF licenses this file
+ * to you under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance
+ * with the License.  You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 package org.apache.pig.test.pigmix.mapreduce;
 
 import java.io.IOException;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.HashSet;
 import java.util.Iterator;
 import java.util.List;
@@ -24,7 +42,6 @@ import org.apache.hadoop.mapred.TextInputFormat;
 import org.apache.hadoop.mapred.jobcontrol.Job;
 import org.apache.hadoop.mapred.jobcontrol.JobControl;
 import org.apache.hadoop.mapred.lib.IdentityMapper;
-
 import org.apache.pig.test.pigmix.mapreduce.Library;
 
 public class L15 {
@@ -64,8 +81,10 @@ public class L15 {
             HashSet<Text> hash1 = new HashSet<Text>();
             HashSet<Text> hash2 = new HashSet<Text>();
             HashSet<Text> hash3 = new HashSet<Text>();
+            int cnt_per_combiner = 0;
             while (iter.hasNext()) {
                 List<Text> vals = Library.splitLine(iter.next(), '');
+                cnt_per_combiner++;
                 try {
 					hash1.add(vals.get(0));
 					hash2.add(vals.get(1));
@@ -87,6 +106,8 @@ public class L15 {
             sb.append("");
             sb.append(ts.toString());
             sb.append("");
+            sb.append(cnt_per_combiner);
+            sb.append("");
             oc.collect(key, new Text(sb.toString()));
             reporter.setStatus("OK");
         }
@@ -103,27 +124,33 @@ public class L15 {
             HashSet<Text> hash2 = new HashSet<Text>();
             HashSet<Text> hash3 = new HashSet<Text>();
             while (iter.hasNext()) {
-                List<Text> vals = Library.splitLine(iter.next(), '');
-                try {
+				Text line = iter.next();
+				List<Text> vals = Library.splitLine(line, '');
+				try {
 					hash1.add(vals.get(0));
 					hash2.add(vals.get(1));
 					hash3.add(vals.get(2));
 				}catch(NumberFormatException nfe) {
 				}
 			}
-			Integer ts=0;
-			Double rev=new Double(0.0);
-            for (Text t : hash2) rev += Double.valueOf(t.toString());
-            for (Text t : hash3) ts += Integer.valueOf(t.toString());
-            StringBuffer sb = new StringBuffer();
+
+			Integer ts = 0;
+			Double rev = new Double(0.0);
+			Integer overall_cnt_per_group = new Integer(0);
+			for (Text t : hash2)
+				rev += Double.valueOf(t.toString());
+			for (Text t : hash3)
+				ts += Integer.valueOf(t.toString());
+			StringBuffer sb = new StringBuffer();
 			sb.append((new Integer(hash1.size())).toString());
-            sb.append("");
-            sb.append(rev.toString());
-            sb.append("");
-            sb.append(ts.toString());
-            oc.collect(key, new Text(sb.toString()));
-            reporter.setStatus("OK");
-        }
+			sb.append("");
+			sb.append(rev.toString());
+			sb.append("");
+			Double avg = (double) ((Integer.valueOf(ts.toString())) / hash3.size());
+			sb.append(avg);
+			oc.collect(key, new Text(sb.toString()));
+			reporter.setStatus("OK");
+		}
     }
 
     public static void main(String[] args) throws IOException {
